--- a/index.html
+++ b/index.html
@@ -4,120 +4,11 @@
 		<!--Template for CSS Project	
 			March 2020
 			Based upon: https://www.tourismpei.com/  -->
-		<style>
-       body{
-         background-color:#32a8a6;
-       }   
-      .navbar {
-        list-style-type: none;
-        margin: 0px;
-        padding: 0px;
-        overflow: hidden;
-        background-color: #333;
-        color:white;
-        position:fixed;
-        top:0px;
-        width:100%;
-         }
-        
-      .nav, .dropbtn {
-        float: left; }
-
-      .nav, .dropbtn {
-        display: inline-block;
-        color: #ffffff;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;}
-
-      .nav:hover, .dropdown:hover .dropbtn {
-        background-color: #42f569; }
-
-      .dropdown {
-        display: inline-block;}
-
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #42f569;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1; }
-
-      .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left; }
-
-      .dropdown-content a:hover { 
-        background-color: #f1f1f1; }
-
-      .dropdown:hover .dropdown-content {
-        display: inline-block;
-        position:fixed;}
-
-      .header{
-        font-size:36px;
-        text-align: center;
-        background-color: #4287f5;
-        color: white;
-        margin-top:50px;
-        margin-bottom:10px;
-        width:100%; }
-
-      .links{
-        width:20%;
-        float:left;
-        margin:10px;
-        height: 800px;
-        border-style:solid;
-        border-width:2px;
-        border-color:#ed4c74;
-      }
-
-      .midcol{
-        width:50%;
-        height:800px;
-        border-style:solid;
-        border-width:2px;
-        border-color:#ed4c74;
-        float:left;
-        margin:10px;
-        margin-left:20px;
-        overflow:scroll;
-      }
-
-      .rightcol{
-        width:20%;
-        height:800px;
-        float:right;
-        top:100px;
-        margin:10px;
-        border-style:solid;
-        border-width:2px;
-        border-color:#ed4c74;
-      }
-
-      .beach{
-        width:100%;
-        border-style:ridge;
-        border-color:#4287f5;
-        border-width:4px;
-      }
-
-      .footer{
-        clear:both;
-      }
-
-      </style>
-				
+    <link rel="stylesheet" href="style.css">
 		<title>My Favourite Beaches</title>
 	</head>
 
 	<body>
-
     <ul class = 'navbar'>
       <li><a href="https://www.tourismpei.com/pei-festivals-and-events" target="_blank" class = 'nav'> Festivals and Events </a></li>
       <li><a href="https://www.tourismpei.com/about-pei" target="_blank" class='nav'> About PEI </a></li>
@@ -134,30 +25,34 @@
 		<div class='header'>
 			My Favourite Beaches	
 		</div>  <!-- end of header --> 
-		
-		
-		<div class='links'>
-			LINKS <br>  
+	
+		<div class='links'>  
 			<!-- Make Links into an unordered list -->
       <ul>
-			<li><a href="https://www.tourismpei.com/pei-festivals-and-events" target="_blank"> 10 Quirky Things You Didn’t Know About PEI </a><li>
-			<li><a href="https://www.tourismpei.com/about-pei" target="_blank">Environment</a></li>
-			<li><a href="https://www.tourismpei.com/pei-package-offers" target="_blank">Getting Here</a></li>
-			<li><a href="https://www.tourismpei.com/pei-accommodations" target="_blank">Important Travel Information</a></li>
-			<li><a href="https://www.tourismpei.com/pei-things-to-do" target="_blank">Island Webcams</a></li>
+			  <li><a href="https://www.tourismpei.com/pei-festivals-and-events" target="_blank"> 10 Quirky Things You Didn’t Know About PEI </a></li>
+			  <li><a href="https://www.tourismpei.com/about-pei" target="_blank">Environment</a></li>
+			  <li><a href="https://www.tourismpei.com/pei-package-offers" target="_blank">Getting Here</a></li>
+			  <li><a href="https://www.tourismpei.com/pei-accommodations" target="_blank">Important Travel Information</a></li>
+			  <li><a href="https://www.tourismpei.com/pei-things-to-do" target="_blank">Island Webcams</a></li>
 			</ul>
 		</div> <!-- end of left column -->
 		
 		<div class='midcol'>
 			<img src="Media/beach1.jpg" alt="Beautiful beach" width = "200px" class = 'beach'> 
 			<br>
-			ABOUT OUR BEACHES <br>
+      <br>
+			<div style="font-weight:bold;">ABOUT OUR BEACHES </div>
+      <br>
+      <br>
+      <div class = "textcent">
 			With beaches that sing and others that stun visitors with their pristine blend of rustic solitude and splendid red sand, Prince Edward Island's sandy expanses continue to receive raves from all over the world, including a nomination as one of Canada's natural wonders.
 			<br>
 			"Walking along the beautiful white sand produces an interesting sound… akin to singing, or some would say, squeaking," the CBC wrote on its website. "It's a phenomenon that scientists still don't completely understand."
 			<br>
-			Campbell's Cove Beach <br>
-			Water Temperature in August <br>
+			Campbell's Cove Beach 
+      <br>
+			Water Temperature in August 
+      <br>
 			North Shore: Min. 8.9°C,  Max. 25.0°C,  Mean. 18.2°C <br>
 			South Shore: Min. 6.7°C,  Max. 23.3°C,  Mean. 18.1°C <br>
 			Western Shore: Min. 3.0°C,  Max. 25.6°C,  Mean. 17.1°C <br>
@@ -177,23 +72,27 @@
 			<br>
 			Others dream of returning. "PEI is the most beautiful, clean province we have seen, and the beaches are something us in Alberta only see in pictures," says Lori from Edmonton. Lori says she'll return for another PEI vacation soon. Such is the draw of PEI's beautiful beaches. And one thing is certain - she won't be alone.
 			<!-- end of center column -->
-		</div>
+		  </div>
+    </div>
 		<div class = 'rightcol'>
-		<p >
+		<div class="text" >
 			On our Island province you are never far from the ocean and one of our numerous spectacular beaches. From the red sand beaches on the south shore to the white sand beaches on the north shore, Prince Edward Island offers a variety of unique and enjoyable beach experiences
-			<img src="Media/riptide.jpg" width = "200px" alt ="Riptide Info">
+			<img src="Media/riptide.jpg" width = "200px" alt ="Riptide Info" class='rip'>
 			<br>
 			Swimming in the ocean is very different from swimming in a pool or lake. The strength and force of even small ocean waves can surprise beach goers who are unfamiliar with the power of the sea. When particular surf conditions are present at some of our beaches, rip currents can occur.
-			
-			
-			
-		</p> <!-- end of right column -->
-		</div>
+      <br>
+      <br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dapibus lorem vitae imperdiet finibus. Ut sed lectus ultricies, luctus tellus sed, lobortis sapien. Nunc at eros sit amet nisi rhoncus finibus. Vivamus vel nunc eu lorem pharetra faucibus. Integer lacus turpis, imperdiet sed lectus eget, egestas maximus risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas cursus eleifend erat. Cras bibendum efficitur odio sed porta. Ut commodo consequat sodales. Nam cursus a mauris in posuere.
+      <br>
+      <br>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dapibus lorem vitae imperdiet finibus. Ut sed lectus ultricies, luctus tellus sed, lobortis sapien. Nunc at eros sit amet nisi rhoncus finibus. Vivamus vel nunc eu lorem pharetra faucibus. Integer lacus turpis, imperdiet sed lectus eget, egestas maximus risus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas cursus eleifend erat. Cras bibendum efficitur odio sed porta. Ut commodo consequat sodales. Nam cursus a mauris in posuere.
+
+		  </div>
+		</div>  <!-- end of right column -->
 		<div class= 'footer'>
 		   <a href="https://www.tourismpei.com/contact-us-page" target = "_blank" >Contact Us </a> 	
 		   2020 Prince Edward Island Tourism. All Rights Reserved.
 		</div> <!-- end of footer -->
-	</body>
-
-
+	
+  </body>
 </html>
